<resources>
    <string name="app_name" translatable="false">Beer VPN</string>
    <string name="connect">Connect</string>
    <string name="connecting" translatable="false"><font color="yellow">Connecting to VPN…</font></string>
    <string name="disconnected" translatable="false"><font color="red">VPN Disconnected</font></string>
    <string name="connected" translatable="false"><font color="green">VPN Connected</font></string>
    <string name="disconnect">Disconnect</string>
    <string name="feedback">Buy a beer</string>
    <string name="open_own_vpn">Open own VPN</string>
    <string name="about">About</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="report">Report a problem</string>
    <string name="nav_drawer_open" translatable="false">Open</string>
    <string name="nav_drawer_close" translatable="false">Close</string>
    <string name="beer_pint" translatable="false">beer pint</string>
    <string name="pint_cost" translatable="false">= 100₽</string>
    <string name="beer_for_beervpn">Beer for BeerVPN</string>
    <string name="beer_for_the_admin">Beer for the Admin</string>
    <string name="buy">Buy!</string>
    <string name="ruble" translatable="false">₽</string>
    <string name="settings">Settings</string>
    <string name="remove_ads">Remove Ads</string>
</resources>
