<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/_menu_top">
        <item
            android:id="@+id/item_feedback"
            android:icon="@drawable/ic_beer"
            android:title="@string/feedback" />
        <item
            android:id="@+id/item_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/item_ads"
            android:icon="@drawable/ic_no_ads"
            android:title="@string/remove_ads"
            app:actionLayout="@layout/switch_item" />
    </group>
    <group android:id="@+id/_menu_center" >
        <item
            android:id="@+id/item_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/item_ownvpn"
            android:icon="@drawable/ic_plus"
            android:title="@string/open_own_vpn" />
    </group>
    <group android:id="@+id/_menu_bottom">
        <item
            android:id="@+id/item_faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq" />
        <item
            android:id="@+id/item_privacy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/item_report"
            android:icon="@drawable/ic_report"
            android:title="@string/report" />
    </group>
</menu>