<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FeedbackActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:drawableLeft="@drawable/beer_pint"
        android:gravity="left|center_vertical|start"
        android:text="@string/pint_cost"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <LinearLayout
        android:id="@+id/_lay_beervpn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beer_for_beervpn"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <SeekBar
            android:id="@+id/seek_bvpn"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="1"
            android:thumb="@drawable/ic_beer" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/_lay_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/_lay_beervpn"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beer_for_the_admin"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <SeekBar
            android:id="@+id/seek_admin"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="2"
            android:thumb="@drawable/ic_beer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/text_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            tools:text="300" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ruble"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

        <Button
            android:id="@+id/btn_buy"
            style="@style/BigButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buy" />
    </LinearLayout>

</RelativeLayout>